--- a/styles/strong.css
+++ b/styles/strong.css
@@ -15,11 +15,10 @@ body {
     border: 2px solid black;
     background: red;
     max-width: 100%;
-    min-height: 100vh;
-    margin: 0 auto;
+    min-height: 100vh; 
     overflow-x: hidden;
     display: grid;
-    row-gap: 0.2rem;
+    row-gap: 0.1rem;
     grid-template-rows: repeat(auto-fit, minmax(6rem, auto));
     grid-template-columns: 1fr;
     grid-template-areas: 
@@ -32,10 +31,10 @@ body {
 }
 
 header {
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
     max-width: 100%;
     width: auto;
-    max-height: 6rem;
+    min-height: 6rem;
     grid-area: header;
     background: white;
     
@@ -45,6 +44,7 @@ header {
 h1 {
     text-align: center;
     font-size: 1.6rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 nav ul li a {
@@ -70,12 +70,65 @@ nav ul li {
 #fitness {
     grid-area: fitness;
     background: burlywood;
+    margin-top: -0.1rem;
     
+}
+
+.fitness-img {
+    /* border: 1px solid black; */
+    margin: 0.5rem auto;
+    padding-top: 0.02rem;
+}
+
+.fitness-img img {
+    width: 18.5rem;
+    max-width: 100%;
+    height: auto;
+    margin: 0.5rem auto;
+    display: block;
+}
+
+.sections {
+    padding: 0.8rem 0.7rem;
+}
+
+.sections h2, h3, p {
+    text-align: center;
+}
+
+.line {
+    height: 0.01rem;
+    background-color: black;
+    width: 100%;
 }
 
 #nutrition {
     grid-area: nutrition;
-    background: blue;
+    background: whitesmoke;
+}
+
+.nutrition-img-text {
+    display: flex;
+    flex-direction: column;
+    /* border: 1px solid black; */
+    margin-top: 1rem;
+    align-content: space-around;
+}
+
+.nutri-items {
+    display: flex;
+    margin-bottom: 1rem;
+}
+
+.nutri-items img {
+    max-width: 100%;
+    width: 6rem;
+    height: auto;
+}
+
+.nutri-items span {
+    align-self: center;
+    padding-left: 1rem;
 }
 
 
