--- a/styles/strong.css
+++ b/styles/strong.css
@@ -7,17 +7,18 @@ body {
     padding: 0;
     background-color: yellow;
     box-sizing: border-box;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 #container {
+    position: relative;
     box-sizing: border-box;
     background: red;
     max-width: 100%;
     min-height: 100vh; 
     overflow-x: hidden;
     display: grid;
-    row-gap: 0.1rem;
+    row-gap: 1rem;
     grid-template-rows: repeat(auto-fit, minmax(6rem, auto));
     grid-template-columns: 1fr;
     grid-template-areas: 
@@ -30,11 +31,15 @@ body {
 }
 
 header {
+    margin-top: -1rem;
     max-width: 100%;
     width: auto;
-    min-height: 6rem;
+    height: 4rem;
     grid-area: header;
     background: crimson; 
+    position: sticky;
+    top: 0;
+    z-index: 2;
 }
 
 .navigation {
@@ -44,6 +49,7 @@ header {
 h1 {
     text-align: center;
     font-size: 1.6rem;
+    
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
