--- a/styles/strong.css
+++ b/styles/strong.css
@@ -18,7 +18,7 @@ body {
     min-height: 100vh; 
     overflow-x: hidden;
     display: grid;
-    row-gap: 1rem;
+    row-gap: 2rem;
     grid-template-rows: repeat(auto-fit, minmax(6rem, auto));
     grid-template-columns: 1fr;
     grid-template-areas: 
@@ -31,10 +31,10 @@ body {
 }
 
 header {
-    margin-top: -1rem;
+    margin-top: -1.1rem;
     max-width: 100%;
     width: auto;
-    height: 4rem;
+    height: 3.8rem;
     grid-area: header;
     background: crimson; 
     position: sticky;
@@ -55,7 +55,7 @@ h1 {
 
 nav ul li a {
     text-decoration: none;
-    font-size: 0.6rem;
+    font-size: 0.7rem;
     color: black;
 }
 
@@ -70,14 +70,41 @@ nav ul {
 
 nav ul li {
     list-style-type: none;
-    margin-right: 1.5rem;
+    padding-right: 1.5rem;
 }
 
 
 #fitness {
     grid-area: fitness;
-    background: burlywood;
+    background-image: url("/images/gymguy1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
     margin-top: -0.1rem; 
+    padding-bottom: 3rem;
+    color: white;
+}
+
+.fitness-container {
+    margin-top: 3.5rem;
+
+}
+
+.fitness-container h3 {
+    background: white;
+    color: black;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0 0.4rem;
+}
+
+.fitness-container p {
+    font-weight: bold;
+    font-family: sans-serif;
+}
+
+.fitness-line {
+    background-color: white!important;
+    
 }
 
 .fitness-img {
@@ -93,8 +120,21 @@ nav ul li {
     display: block;
 }
 
+.register {
+    border: 2px solid white;
+    width: 50%;
+    margin: 1.5rem auto;
+    padding: 0.4rem 0;
+    text-align: center;
+    cursor: pointer;
+}
+
 .sections {
     padding: 0.8rem 0.7rem;
+}
+
+.sections h2 {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .sections h2, h3, p {
@@ -109,7 +149,13 @@ nav ul li {
 
 #nutrition {
     grid-area: nutrition;
-    background: whitesmoke;
+    background: orange;
+    
+}
+
+.nutrition-container {
+    margin-top: 3.5rem;
+
 }
 
 .nutrition-img-text {
@@ -147,17 +193,26 @@ nav ul li {
     background-size: cover;
 }
 
+.training-container {
+    margin-top: 3.5rem;
+}
+
 #training h2 {
     margin-top: -0.02rem;
-    color: white;
+    color: black;
+    background-color: white;
+    width: 60%;
+    margin: 0 auto;
 }
 
 .trainer-content {
     max-width: 100%;
     width: 12rem;
     margin: 0 auto;
+    margin-bottom: 4rem;
     height: 12rem;
-    background-color: white;
+    background-color: black;
+    color: white;
     opacity: 0.8;
     padding: 0.5rem 0.8rem;
 }
@@ -165,6 +220,15 @@ nav ul li {
 #gymclasses {
     grid-area: gymclasses;
     background: crimson;
+}
+
+.gymclass-container {
+    margin-top: 3.5rem;
+}
+
+.gymclass-container p {
+    color: white;
+
 }
 
 .gymclass-items img {
